Ticket CRS-30 Contact Model, Contact Repository , Contact Mapper , Contact DTO , Contact Service and Recaptcha
Ticket CRS-30 Contact Model, Contact Repository , Contact Mapper , Contact DTO , Contact Service and Recaptcha finish

Update ContactController.java

Update WebSecurityConfig.java

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,9 @@ spring:
           ssl:
             trust: "*"
 
+  Recaptcha:
+    secretKey: "6Lfp22gqAAAAAE-H0MJyWAbVFvnhQ9j_VfcUQI-l"
+
   file:
     upload-dir: D:/Projet rollingFoodsApp/pictures
   webflux:
