--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- JJWT Dependency END -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
